# UTA-Rover-Society-embedded

./: README.md  Start ROS  contributors.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/rosToArduino/: CMakeLists.txt  package.xml
ros_catkin_ws/: jade-ros_comm-wet.rosinstall
ros_catkin_ws/build_isolated/: catkin_make_isolated.cache
ros_catkin_ws/build_isolated/actionlib_msgs/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/catkin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ros_catkin_ws/build_isolated/cmake_modules/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ros_catkin_ws/build_isolated/common_msgs/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/cpp_common/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
ros_catkin_ws/build_isolated/diagnostic_msgs/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ros_catkin_ws/build_isolated/gencpp/: Makefile  (+4 more)
ros_catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ros_catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
ros_catkin_ws/install/: .rosinstall  setup.sh
ros_catkin_ws/src/: .rosinstall
ros_catkin_ws/src/controls/: CMakeLists.txt  Controls ReadMe  package.xml
ros_catkin_ws/src/controls/launch/: start_controls.launch
ros_catkin_ws/src/controls/src/: controller  controller.cpp  joystick  joystick.cpp
(+2046 files in other folders)
